--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -13,6 +13,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "resend": "^6.1.2"
   }
 }
