--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -5,6 +5,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.13",
+    "@arcjet/node": "^1.0.0-beta.13",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
